--- a/twitter.ipynb
+++ b/twitter.ipynb
@@ -5,7 +5,7 @@
    "id": "7b20b43d-394b-4ee7-8364-9d22bdac5ea3",
    "metadata": {},
    "source": [
-    "# MANA BIO Assignment "
+    "# Assignment "
    ]
   },
   {
